@@ -1,5 +1,7 @@
 - Fix possible memory leak in C/C++ library when communicating with
   a broker that doesn't follow the spec.
+- Don't always attempt to call read() for SSL clients, irrespective of whether
+  they were ready to read or not. Reduces syscalls significantly.
 
 1.2.2 - 20131021
 ================
